_sass/_gallery.scss
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}


.blankbox {
    background: $theme-color;
}
.img_row {
    height: 150px;
    width: 100%;
    // overflow: hidden;
    box-sizing:border-box;
}

.circular_img {
  border-radius: 50%;
}
.col {
    width: 100%;
    height: 100%;
    object-fit: scale-down;
    box-sizing:border-box;
    /*padding: $img-spacing;*/
}
.one {
    width:33.33%;
}
.two {
    width: 66.66%;
}
.three {
    width: 100%;
}
.half {
  width:45%;
}
.full {
  width:90%;
}
.caption {
    height: 100%;
    color: $caption-color;
    text-align: center;
    vertical-align: middle;
    font-size: $caption-font-size;
}
.about_caption {
  height: 150px;
  width: 100%;
  text-align: center;
  vertical-align: middle;
  box-sizing:border-box;
}

